# nix-files

./: .desktop-configuration.nix  .gitignore  .m3800-configuration.nix  .x220-configuration.nix  90-yubikey.rules  99-mouse.conf  Makefile  bash.nix  config.nix  configuration.nix  default-configuration.nix  default.nix  desktop-configuration.nix  flake.nix  hardware-configuration.nix  home-atsoukka.nix  home-configuration.nix  home.nix  m3800-configuration.nix  m3800-hardware.nix  macos-home.nix  packages-configuration.nix  packages.nix  this-is-my-home.nix  vim.nix  x220-configuration.nix  x220-hardware.nix  xresources.nix
cachix/: datakurre.nix
deprecated/: x220-configuration.nix
dotfiles/: afew.conf  alot.nix  alot.signature-jyu  docutils.conf  gitconfig  irssi.conf  irssi.secrets  irssi.secrets.pl  irssi.startup  mailcap  mbsyncrc  msmtprc  notmuch-iki-post-new  notmuch-iki-pre-new  notmuch-iki.nix  notmuch-jyu-post-new  notmuch-jyu-pre-new  notmuch-jyu.nix  pdbrc.py  polybar.conf  pulseaudio.conf  tmux.conf  vimrc  xmonad.hs
home/: env-fonts.nix  env-nix.nix  hw-marble-mouse.nix  programs-git.nix  programs-shell.nix  programs-signal-desktop.nix  programs-ssh.nix  programs-vscode.nix  services-adb.nix  services-cachix.nix  services-fineid.nix  services-redshift.nix  services-tailscale.nix  services-virtualization.nix
modules/: battery-notifier.nix  env-base.nix  env-locale.nix  env-network.nix  env-user.nix  (+11 more)
overlays/custom/jupyter-env/: default.nix  requirements-python3.nix  requirements-python3.txt  requirements.nix  robotframework.js  setup.cfg  setup.nix
(+107 files in other folders)
