[metadata]
name = robotkernel
version = 0.0.1.dev0

[options]
setup_requires =
#   pytest-runner
test_require =
#   jypyter_kernel_test
install_requires =
    ipykernel
    pillow
    pygments
    robotframework
    RESTinstance
    robotframework-seleniumlibrary
    robotframework-selenium2screenshots
    robotframework-SikuliLibrary
py_modules =
    robotkernel

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[flake8]
exclude = .git,__pycache__
max-complexity = 10

[isort]
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 200
not_skip = __init__.py
